deploy/overlays/prod/ingress-patches.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: federation-api-ingress
  namespace: dh-health
spec:
  rules:
  - host: federation.prod.dh.unimaas.nl
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transform-rest-ingress
  namespace: dh-health
spec:
  rules:
  - host: transform.prod.dh.unimaas.nl
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-zib-ingress
  namespace: dh-health
spec:
  rules:
  - host: jupyter.prod.dh.unimaas.nl
